# hpc2torch

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh  test.sh
include/kunlun/: binary_kunlun.h  binary_kunlun.xpu  common_kunlun.h  kunlun_type.h
include/mlu/: common_mlu.h
include/npu/: common_npu.cpp  common_npu.h
include/teco/: common_teco.h
src/attention/gpu/: attention_cuda.cu
src/batchnorm/mlu/: batchnorm_bang.mlu  batchnorm_cnnl.cpp
src/batchnorm/npu/: batchnorm_aclnn.cpp
src/binary/mlu/: binary_cnnl.cpp
src/binary/npu/: binary_aclnn.cpp
src/causal_softmax/mlu/: causal_softmax_bang.mlu  causal_softmax_cnnl.cpp
src/causal_softmax/teco/: causal_softmax_teco.scpp
src/clip/cpu/: clip_cpu.cpp
src/clip/gpu/: clip_cuda.cu
src/clip/mlu/: clip_cnnl.cpp
src/clip/npu/: clip_aclnn.cpp
src/concat/mlu/: concat_cnnl.cpp
src/concat/npu/: concat_aclnn.cpp
src/convTranspose/mlu/: convTranspose_cnnl.cpp
src/convTranspose/npu/: convTranspose_aclnn.cpp
src/convolution/npu/: convolution_aclnn.cpp
src/expand/mlu/: expand_cnnl.cpp
src/expand/npu/: expand_aclnn.cpp
src/extend/gpu/: extend_cuda.cu
src/extend/mlu/: extend_cnnl.cpp
src/extend/npu/: extend_aclnn.cpp
src/gather/gpu/: gather_cuda.cu
src/gather/mlu/: gather_cnnl.cpp
src/gather/npu/: gather_aclnn.cpp
src/gatherElements/mlu/: gatherElements_cnnl.cpp
src/gatherElements/npu/: gatherElements_aclnn.cpp
src/gptq/cpu/: gptq_cpu.cpp
src/layernorm/cpu/: layernorm.cpp
src/layernorm/mlu/: layernorm_bang.mlu  layernorm_cnnl.cpp
src/layernorm/npu/: layernorm_aclnn.cpp
src/matmul/gpu/: matmul_cuda.cu
src/matmul/mlu/: matmul_cnnl.cpp
src/matmul/npu/: matmul_aclnn.cpp
src/pad/mlu/: pad_cnnl.cpp
src/pad/npu/: pad_aclnn.cpp
src/pooling/mlu/: pooling_cnnl.cpp
src/pooling/npu/: pooling_aclnn.cpp
src/quantize_gptq/cpu/: quantize_gptq_cpu.cpp
src/quantize_gptq/gpu/: gptq_marlin.cu  gptq_marlin.cuh  quantize_gptq_cuda.cu
src/random_sample/teco/: random_sample_teco.scpp
src/reduce/mlu/: reduce_cnnl.cpp
src/reduce/npu/: reduce_aclnn.cpp
src/rms_norm/mlu/: reduce_rmsnorm.mlu  rmsnorm_bang.mlu  rmsnorm_bangT.mlu
src/rotary_embedding/kunlun/: rotary_embedding_kunlun.xpu
src/rotary_embedding/mlu/: rotary_embedding_bang.mlu
src/slice/mlu/: slice_cnnl.cpp
src/slice/npu/: slice_aclnn.cpp
src/softmax/cpu/: softmax.cpp
src/split/mlu/: split_cnnl.cpp
src/split/npu/: split_aclnn.cpp
src/swiglu/kunlun/: swiglu_kunlun.xpu
src/unary/mlu/: unary_cnnl.cpp
src/unary/npu/: unary_aclnn.cpp
src/where/mlu/: where_cnnl.cpp
src/where/npu/: where_aclnn.cpp
test/: attention.py  batchnorm.py  binary.py  causal_softmax.py  clip.py  concat.py  convTranspose.py  convolution.py  expand.py  extend.py  gather.py  gatherElements.py  gptq.py  layernorm.py  matmul.py  pad.py  performance.py  pooling.py  precision_compare.py  quantize_gptq.py  random_sample.py  reduce.py  rmsnorm.py  rotary_embedding.py  slice.py  split.py  swiglu.py  unary.py  where.py
